<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">F1 Stats</string>
    <string name="title_calendar">Calendar - %1$s</string>
    <string name="title_ranking">Standings - %1$s</string>
    <string name="title_circuits">Circuits</string>
    <string name="nav_home">Calendar</string>
    <string name="nav_dashboard">Standings</string>
    <string name="settings">Settings</string>
    <string name="race">Race</string>
    <string name="qualy">Qualifying</string>
    <string name="sprint_shootout">Sprint Shootout</string>
    <string name="p1">Practice 1</string>
    <string name="p2">Practice 2</string>
    <string name="p3">Practice 3</string>
    <string name="race_weekend">Race weekend</string>
    <string name="title_favorites">Favorites</string>
    <string name="ranking_drivers">Drivers</string>
    <string name="ranking_teams">Teams</string>
    <string name="ranking_races">Results</string>
    <string name="favorites_todo">Favorites</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="world_championships_label">World Championships</string>
    <string name="podiums_label">Podiums</string>
    <string name="wins_label">Wins</string>
    <string name="races_label">Races</string>
    <string name="total_points_label">Total points</string>
    <string name="driverContentDescription">Driver image</string>
    <string name="driver_label">DRIVER</string>
    <string name="close_button">Close</string>
    <string name="add_to_favorite_list">Add to favorite list</string>
    <string name="music_label">Music</string>
    <string name="music_label_title">Play music</string>
    <string name="select_season_label">Select Season</string>
    <string name="card_arrow_content_description">View detail</string>
    <string name="imageDriver">Driver\'s image</string>
    <string name="imageTeam">Team\'s image</string>
    <string name="sprint">Sprint</string>
    <string name="first_season_label">First Season</string>
    <string name="pole_positions_label">Pole Positions</string>
    <string name="fastest_laps_label">Fastest Laps</string>
    <string name="pos_label">POS</string>
    <string name="time_label">TIME</string>
    <string name="points_label">PTS</string>
    <string name="circuit_length_label">Circuit length</string>
    <string name="laps_laps">Laps</string>
    <string name="first_grand_prix_laps">First Grand Prix</string>
    <string name="lap_record_label">Lap record</string>
    <string name="photo_content_desc">Photo</string>
    <string name="no_favorites">No favorites yet</string>
    <string name="favorite_added">Race added to the favorite list</string>
    <string name="favorite_removed">Race removed from the favorite list</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="dark_mode_activated_option">Enabled</string>
    <string name="dark_mode_deactivated_option">Disabled</string>
    <string name="dark_mode_default_option">System default</string>
    <string name="app_version_label">F1 Stats v1.0</string>
    <string name="about_label">About</string>
    <string name="app_icon_content_description">App icon</string>
    <string name="icon_noFavorites">Empty favorites icon</string>
    <string name="noFavorites_subtitle">You can add them from the standing races</string>
    <string name="map_text">Map</string>
    <string name="driver_actual_team_label">Current team</string>
    <string name="icon_wc">World championships icon</string>
    <string name="icon_wins">Wins icon</string>
    <string name="icon_podiums">Podiums icon</string>
    <string name="icon_points">Points icon</string>
    <string name="image_actual_team">Current team image</string>
    <string name="icon_races">Races icon</string>
    <string name="icon_fast_lap">Fast lap icon</string>
    <string name="icon_first_season">First season icon</string>
    <string name="races_calendar_title">Next GPs</string>
    <string name="icon_no_races">Completed season icon</string>
    <string name="season_completed_title">Season completed</string>
    <string name="season_completed_subtitle">Stay tuned for more GPs coming soon</string>
    <string name="close_button_label">X</string>
    <string name="select_season_spinner">Seleccionar temporada</string>
</resources>