<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/settings_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_label_title"
            android:layout_marginBottom="@dimen/settings_margin_bottom"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/musicSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_label"
            android:paddingHorizontal="@dimen/settings_padding_element"
            android:layout_marginBottom="@dimen/settings_margin_bottom_big" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode_label"
            android:layout_marginBottom="@dimen/settings_margin_bottom"/>
        <RadioGroup
            android:id="@+id/themeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/settings_margin_bottom_big">
            <RadioButton
                android:id="@+id/darkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_activated_option"/>
            <RadioButton
                android:id="@+id/lightMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_deactivated_option"/>
            <RadioButton
                android:id="@+id/defaultMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dark_mode_default_option"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_season_label"
            android:layout_marginBottom="@dimen/settings_margin_bottom"/>
        <Spinner
            android:id="@+id/yearSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/settings_margin_bottom_select"
            android:contentDescription="@string/select_season_spinner"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_label"
            android:layout_marginBottom="@dimen/settings_margin_bottom"/>
        <ImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="@dimen/settings_appIconSize"
            android:layout_height="@dimen/settings_appIconSize"
            android:contentDescription="@string/app_icon_content_description"
            style="@style/appIcon"
            android:src="@drawable/appicon_alpha"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_version_label"
            android:textSize="@dimen/min_text_size"
            android:layout_marginBottom="@dimen/settings_margin_bottom"/>
    </LinearLayout>
</ScrollView>
