<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ranking.raceResult.raceResultDetail.RaceResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dark_blue"
        android:padding="@dimen/race_result_padding"
        android:layout_marginBottom="@dimen/race_result_margin_bottom">
        <TextView
            android:id="@+id/tvPos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/raceResultHeaderText"
            android:text="@string/pos_label"/>
        <TextView
            android:id="@+id/tvDriver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/raceResultHeaderText"
            android:text="@string/driver_label"/>
        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/raceResultHeaderText"
            android:text="@string/time_label"/>
        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/raceResultHeaderText"
            android:text="@string/points_label"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>