<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:paddingHorizontal="@dimen/scrollView_padding_hor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvDriverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                tools:text="Fernando Alonso"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/tvDriverNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDriverName"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:text="14"/>
            <TextView
                android:id="@+id/tvDriverCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDriverName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tvDriverNumber"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="Spain"/>
            <ImageView
                android:id="@+id/ivDriverImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/driverContentDescription" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/tvWCLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/world_championships_label"
                tools:text="World Championships"/>
            <TextView
                android:id="@+id/tvWC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWCLabel"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="2"/>
            <TextView
                android:id="@+id/tvPodiumsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Podiums"
                android:text="@string/podiums_label"
                android:layout_below="@+id/tvWC"/>
            <TextView
                android:id="@+id/tvPodiums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPodiumsLabel"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="98"/>
            <TextView
                android:id="@+id/tvWinsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWC"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/wins_label"
                tools:text="Wins"/>
            <TextView
                android:id="@+id/tvWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWinsLabel"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="32"/>
            <TextView
                android:id="@+id/tvRacesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPodiums"
                android:layout_marginTop="30dp"
                android:text="@string/races_label"
                tools:text="Races"/>
            <TextView
                android:id="@+id/tvRaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRacesLabel"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="352"/>
            <TextView
                android:id="@+id/tvPointsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPodiums"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/total_points_label"
                tools:text="Total points"/>
            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPointsLabel"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="2039"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>